--- a/shard.yml
+++ b/shard.yml
@@ -2,7 +2,7 @@ name: sparkle
 version: 0.1.0
 
 authors:
-  - Your Name <your@email.com>
+  - NitosMaster nunoarrochella@gmail.com
 
 targets:
   sparkle:
