--- a/shard.yml
+++ b/shard.yml
@@ -8,6 +8,14 @@ targets:
   sparkle:
     main: src/sparkle.cr
 
+dependencies:
+  glfw:
+    github: ghass/crystal-glfw
+  gl:
+    github: n_m3/crystal-gl
+  vmath:
+    github: lbarasti/vmath
+
 crystal: 1.18.2
 
 license: MIT
